[package]
name = "heavy_artillery"
version = "0.1.2"
edition = "2021"
authors = ["Christman-Gavin"]
description = "Heavy artillery in rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3